--- a/v3/index.html
+++ b/v3/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <style>
-        body {
+        body{
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            margin: 0;
+        }
+        .collect-thumbs {
             color: #f3f3f8;
             text-align: center;
             overflow-x: hidden;
             background-image: url("bg-sky.png");
             background-size: cover;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
+            height:100%;
         }
-        div {
+        .sprite-merge {
             background-size:386px 567px;
             background-image: url("thumbs.png");
             transform:translateZ(0);
@@ -36,86 +40,52 @@
         .heigh-like {
             background-position: -278px 0px;
         }
-        .like-ad1 {
+        .ad-sprite {
             width: 24px;
             height: 24px;
             border-radius: 4px;
-            background-position: 0px -175px;
             display: none;
+        }
+        .like-ad1 {
+            background-position: 0px -175px;
         }
         .like-ad2 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -198px;
-            display: none;
         }
         .like-ad3 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -222px;
-            display: none;
         }
         .like-ad4 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -245px;
-            display: none;
         }
         .like-ad5 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -269px;
-            display: none;
         }
         .like-ad6 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -293px;
-            display: none;
         }
         .like-ad7 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -316px;
-            display: none;
         }
         .like-ad8 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -340px;
-            display: none;
         }
         .like-ad9 {
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
             background-position: 0px -364px;
+        }
+        .plus {
+            width: 33px;
+            height: 18px;
             display: none;
         }
         .plus10 {
-            width: 33px;
-            height: 18px;
             background-position: 0px -122px;
-            display: none;
         }
         .plus5 {
-            width: 33px;
-            height: 18px;
             background-position: 0px -140px;
-            display: none;
         }
         .plus1 {
-            width: 26px;
-            height: 18px;
             background-position: 0px -157px;
-            display: none;
         }
         .ding-logo {
             left: 0px;
@@ -210,55 +180,61 @@
     <title></title>
 </head>
 <body>
-<div class="score-logo"><span class="score">0</span></div>
-<div class="time-logo"><span class="time">0</span></div>
-<div class="ding-logo"></div>
+<div class="collect-thumbs">
+</div>
 <script src="../jquery-3.0.0.js"></script>
 <script>
-    document.body.addEventListener("touchmove", function(e){
-    	e.preventDefault();
-    }, true);
     var collectThumbs = {
         score: 0,
         initWidth: window.screen.width - 80,
         html: '',
         height: window.screen.height - 180,
-        time: 20
+        time: 1,
+        flag: 1,
+        init: function(){
+            collectThumbs.score = 0;
+            collectThumbs.time = 20;
+            collectThumbs.flag = 1;
+            $('.collect-thumbs').height(window.screen.height);
+            collectThumbs.html = '<div class="score-logo sprite-merge"><span class="score">0</span></div><div class="time-logo sprite-merge"><span class="time">0</span></div><div class="ding-logo sprite-merge"></div>';
+
+            //构造池子,这里改成join
+            for(var i =0; i < 4; i++){
+                collectThumbs.html += "<div class='normal-like hide sprite-merge' style='left:" + Math.ceil(collectThumbs.initWidth * Math.random()) + "px'></div>";
+            }
+            for (var i =0; i < 1; i++){
+                collectThumbs.html += "<div class='middle-like middle-like" + Math.ceil(10 * Math.random()) + " hide sprite-merge' style='left:" + Math.ceil(collectThumbs.initWidth * Math.random()) + "px'></div>";
+                collectThumbs.html += "<div class='plus plus5 sprite-merge'></div>";
+            }
+            for (var i =0; i < 1; i++){
+                collectThumbs.html += "<div class='heigh-like heigh-like" + Math.ceil(10 * Math.random()) + " hide sprite-merge' style='left:" + Math.ceil(collectThumbs.initWidth * Math.random()) + "px'></div>";
+                collectThumbs.html += "<div class='plus plus10 sprite-merge'></div>";
+            }
+            for (var i =0; i < 3; i++){
+                //产品还没定型，猜测加5,10，可能没有这么多，因此拿到赞那里初始化
+                collectThumbs.html += "<div class='plus plus1 sprite-merge'></div>";
+            }
+            for(var i=1; i < 10; i++){
+                collectThumbs.html += "<div class='ad-sprite like-ad" + i + " sprite-merge'></div>";
+            }
+            $('.collect-thumbs').html(collectThumbs.html);
+            //得分逻辑
+            $('.normal-like').bind('touchstart', function(){
+                if(!$(this).hasClass('explosion'))
+                    showScorePlus($(this),1);
+            });
+
+            $('.middle-like').bind('touchstart', function(){
+                if(!$(this).hasClass('explosion'))
+                    showScorePlus($(this),5);
+            });
+
+            $('.heigh-like').bind('touchstart', function(){
+                if(!$(this).hasClass('explosion'))
+                    showScorePlus($(this),10);
+            });
+        }
     };
-    $('body').height(window.screen.height);
-    //构造池子,这里改成join
-    for(var i =0; i < 4; i++){
-        collectThumbs.html += "<div class='normal-like hide' style='left:" + Math.ceil(collectThumbs.initWidth * Math.random()) + "px'></div>";
-    }
-    for (var i =0; i < 1; i++){
-        collectThumbs.html += "<div class='middle-like middle-like" + Math.ceil(10 * Math.random()) + " hide' style='left:" + Math.ceil(collectThumbs.initWidth * Math.random()) + "px'></div>";
-        collectThumbs.html += "<div class='plus5'></div>";
-    }
-    for (var i =0; i < 1; i++){
-        collectThumbs.html += "<div class='heigh-like heigh-like" + Math.ceil(10 * Math.random()) + " hide' style='left:" + Math.ceil(collectThumbs.initWidth * Math.random()) + "px'></div>";
-        collectThumbs.html += "<div class='plus10'></div>";
-    }
-    for (var i =0; i < 3; i++){
-        //产品还没定型，猜测加5,10，可能没有这么多，因此拿到赞那里初始化
-        collectThumbs.html += "<div class='plus1'></div>";
-    }
-    collectThumbs.html += "<div class='like-ad1'></div><div class='like-ad2'></div><div class='like-ad3'></div><div class='like-ad4'></div>"
-    $('body').prepend(collectThumbs.html);
-    //得分逻辑
-    $('.normal-like').bind('touchstart', function(){
-        if(!$(this).hasClass('explosion'))
-        showScorePlus($(this),1);
-    });
-
-    $('.middle-like').bind('touchstart', function(){
-        if(!$(this).hasClass('explosion'))
-        showScorePlus($(this),5);
-    });
-
-    $('.heigh-like').bind('touchstart', function(){
-        if(!$(this).hasClass('explosion'))
-        showScorePlus($(this),10);
-    });
     function showScorePlus(_this,_score){
         //每次创建都要新的并回收，这里可以全局化
         //展示加分及广告
@@ -270,11 +246,11 @@
                 break;
             case 5:
                 thePlus = $('.plus5:first');
-                theAd = $('.like-ad' + ( 1 + parseInt(4 * Math.random())));
+                theAd = $('.like-ad' + ( 1 + parseInt(9 * Math.random())));
                 break;
             case 10:
                 thePlus = $('.plus10:first');
-                theAd = $('.like-ad' + ( 1 + parseInt(4 * Math.random())));
+                theAd = $('.like-ad' + ( 1 + parseInt(9 * Math.random())));
                 break;
         }
         //爆炸效果
@@ -289,14 +265,14 @@
             theAd.fadeToggle(300);
             theAd.fadeToggle(450);
         }
-        thePlus.fadeToggle(450);
+        thePlus.fadeToggle(470);
         _this.stop();
         setTimeout(function(){
             _this.removeClass('explosion');
             _this.addClass('hide');
             //重新定位
             _this.css('left', Math.ceil(collectThumbs.initWidth * Math.random()) + 'px');
-        },500);
+        },470);
 
         //展示分数，中断动画
         collectThumbs.score += _score;
@@ -310,9 +286,9 @@
         var a = nextMove;
         for(var i = 0; i < nextMove.length; i++){
             nextMove[i].removeClass('hide');
-           nextMove[i].animate({top:collectThumbs.height + 'px'}, 1000 + 3000 * Math.random(), 'linear', function(){
+            nextMove[i].animate({top:collectThumbs.height + 'px'}, 1000 + 3000 * Math.random(), 'linear', function(){
                 if(!$(this).hasClass('hide')){$(this).addClass('hide');}
-           });
+            });
         }
     }
 
@@ -321,26 +297,38 @@
         if(collectThumbs.time == 10){
             $('.time').addClass('countdown');
         }
-        if(collectThumbs.time <= 0 ){
-//            window.location.href = "http://localhost:63342/pumpMouse/demo/divRbackArea.html"
+        if(collectThumbs.time <= 0 && collectThumbs.flag){
+            collectThumbs.flag = 0;
+            if(collectThumbs.score >= 100){
+//                lewen3_app.show_open_prize_page(collectThumbs.score);
+            }else{
+//                lewen3_app.show_failure();
+            }
+            $('.collect-thumbs').html('');
+            gemeStart();
         }
         $('.time').html(collectThumbs.time);
     }
 
-    setInterval(timeChange,1000);
+    function gameStart(){
+        collectThumbs.init();
+        //开始计时
+        setInterval(timeChange,1000);
 
-    //当选点消失，自己悄悄的异步修改其起始位置即可
-    //研究，这里的操作能否分多个帧完成
-    setInterval(function(){
-        //把消失的点初始化
-        var nextMove = [];
-        $('.hide').each(function(){
-            $(this).css("top","0px");
-            nextMove.push($(this));
-        });
-        //move
-        move(nextMove);
-    },500);
+        //当选点消失，自己悄悄的异步修改其起始位置即可
+        //研究，这里的操作能否分多个帧完成
+        setInterval(function(){
+            //把消失的点初始化
+            var nextMove = [];
+            $('.collect-thumbs .hide').each(function(){
+                $(this).css("top","0px");
+                nextMove.push($(this));
+            });
+            //move
+            move(nextMove);
+        },500);
+    }
+    gameStart();
 </script>
 </body>
 </html>
