--- a/v3/index.html
+++ b/v3/index.html
@@ -180,8 +180,7 @@
     <title></title>
 </head>
 <body ontouchmove="event.preventDefault()">
-<div class="collect-thumbs">
-</div>
+<code><div class="collect-thumbs"></div></code>
 <script src="../jquery-3.0.0.js"></script>
 <script>
     var collectThumbs = {
