--- a/v3/index.html
+++ b/v3/index.html
@@ -180,7 +180,7 @@
     <title></title>
 </head>
 <body ontouchmove="event.preventDefault()">
-<code><div class="collect-thumbs"></div></code>
+<code style="display:block"><div class="collect-thumbs"></div></code>
 <script src="../jquery-3.0.0.js"></script>
 <script>
     var collectThumbs = {
