--- a/v3/index.html
+++ b/v3/index.html
@@ -274,7 +274,7 @@
         thePlus.fadeToggle(470);
         _this.stop();
         setTimeout(function(){
-            _this.removeClass('explosion');
+//            _this.removeClass('explosion');
             _this.addClass('opacity-hide');
             //重新定位
             _this.css('transform', 'translateX('+Math.ceil(collectThumbs.initWidth * Math.random()) + 'px)');
@@ -292,6 +292,7 @@
         var a = nextMove;
         for(var i = 0; i < nextMove.length; i++){
             nextMove[i].removeClass('opacity-hide');
+            nextMove[i].removeClass('explosion');
             nextMove[i].animate({top:collectThumbs.height + 'px'}, 1000 + 3000 * Math.random(), 'linear', function(){
                 if(!$(this).hasClass('opacity-hide')){$(this).addClass('opacity-hide');}
             });
