--- a/v3/index.html
+++ b/v3/index.html
@@ -154,8 +154,8 @@
             to {transform:scale(3,3)}
         }
         .explosion {
-            -webkit-animation: explosion 0.5s steps(6);
-            animation: explosion 0.5s steps(6);
+            -webkit-animation: explosion 0.6s steps(6) forwards;
+            animation: explosion 0.6s steps(6) forwards;
         }
         @-webkit-keyframes explosion {
             0% {
