--- a/v3/fullPagesToCompare.html
+++ b/v3/fullPagesToCompare.html
@@ -569,6 +569,7 @@
 
                     // 重启游戏
                     $('body').html('<div class="absolute screen lewen3-game-page" style="height: 736px; width: 414px;"><div class="collect-thumbs"></div></div>');
+                    alert('clear');
                     setTimeout(gameStart, 1000);
                 });
 
