--- a/v3/fullPagesToCompare.html
+++ b/v3/fullPagesToCompare.html
@@ -568,7 +568,7 @@
                     $('.lewen3-game-page-cover').addClass('hide');
 
                     // 重启游戏
-                    $('body').html('<div class="absolute screen lewen3-game-page" style="height: 736px; width: 414px;"><div class="collect-thumbs"></div></div>');
+                    $('body').html('<div class="body-container"><div class="absolute screen lewen3-game-page" style="height: 736px; width: 414px;"><div class="collect-thumbs"></div></div></div>');
                     alert('clear');
                     setTimeout(gameStart, 1000);
                 });
