--- a/v3/fullPagesToCompare.html
+++ b/v3/fullPagesToCompare.html
@@ -52,11 +52,11 @@
 		]
 	});
 	</script>
+	 <link rel="stylesheet" href="https://km.tencent.com/pkm_alpha/build/css/apps/episodes/lewen3anniversary-e3df8482a3.css">
 <script charset="utf-8" src="chrome-extension://jgphnjokjhjlcnnajmfjlacjnjkhleah/js/btype.js"></script><link type="text/css" rel="stylesheet" href="chrome-extension://kfgmnlgjmofpiicpgohgfpeabgpmhjdp/style.css"><script type="text/javascript" charset="utf-8" src="chrome-extension://kfgmnlgjmofpiicpgohgfpeabgpmhjdp/page_context.js"></script><div id="BIJIA_HAS_BUILT" class="chrome"></div></head>
 <body gtools_scp_screen_capture_injected="true">
 	<div class="body-container">
-		    <link rel="stylesheet" href="https://km.tencent.com/pkm_alpha/build/css/apps/episodes/lewen3anniversary-e3df8482a3.css">
-
+		   
     <!-- lewen三周年数据 -->
     <span id="js-lewen3-data" class="js-lewen3-data js-share-to-wechat-data js-share-to-ikm-data hide" data-title="乐问三周年，挑「赞」成功就有好礼！" data-sharelink="https://km.tencent.com/pkm_alpha/episodes/lewen-game-index?share_begin=1" data-sharelinkkm="https://km.tencent.com/pkm_alpha/episodes/lewen-game-index?share_begin=1" data-shareicon="https://km.tencent.com/pkm_alpha/build/img/episodes/lewen3/share-icon-a3f01e8889.png">我正在参加乐问三周年挑「赞」达人活动，集齐百赞就有好礼，你还等什么？</span>
 
@@ -568,7 +568,7 @@
                     $('.lewen3-game-page-cover').addClass('hide');
 
                     // 重启游戏
-                    $('body').html('<div class="body-container"><div class="absolute screen lewen3-game-page" style="height: 736px; width: 414px;"><div class="collect-thumbs"></div></div></div>');
+                    $('body').html('<div class="absolute screen lewen3-game-page" style="height: 736px; width: 414px;"><div class="collect-thumbs"></div></div>');
                     alert('clear');
                     setTimeout(gameStart, 1000);
                 });
