--- a/v3/fullPagesToCompare.html
+++ b/v3/fullPagesToCompare.html
@@ -636,6 +636,7 @@
             timeInterval: 0,
             currTicket: (new Date()).valueOf(),
             init: function(){
+            	debugger;
                 collectThumbs.score = 0;
                 collectThumbs.time = 20;
                 collectThumbs.flag = 1;
