--- a/v3/index.html
+++ b/v3/index.html
@@ -99,7 +99,7 @@
             to {transform:translateY(20px);}
         }
         @-webkit-keyframes dingMove {
-            to {transform:translateY(20px);}
+            to {-webkit-transform:translateY(20px);}
         }
         .flow-up {
             animation: scoreUp 0.7s 1 alternate;
@@ -109,7 +109,7 @@
             to {transform:translate(0px,-15px);}
         }
         @-webkit-keyframes scoreUp {
-            to {transform:translate(0px,-15px);}
+            to {-webkit-transform:translate(0px,-15px);}
         }
         .score-logo {
             top: 9px;
