--- a/arGame/index.html
+++ b/arGame/index.html
@@ -178,7 +178,7 @@
             capabilities: [],
             files: [],
             success: function() { 
-              document.body.innerHTML = '<p>This demo currently requires a standards compliant mobile browser (e.g. Firefox on Android). NOTE: iOS does not currently support WebGL or WebRTC and has not implemented the DeviceOrientation API correctly. Please see <a href="http://lists.w3.org/Archives/Public/public-geolocation/2014Jan/0000.html">this post to the W3C GeoLocation Working Group</a> for more detailed information.</p>';
+              document.body.innerHTML = '<p>请使用android~</p>';
               return;
             },
           },
