--- a/arGame/index.html
+++ b/arGame/index.html
@@ -179,7 +179,7 @@
             capabilities: [],
             files: [],
             success: function() { 
-              //document.body.innerHTML = '<p>请使用android~</p>';
+              document.body.innerHTML = '<p>请使用android~</p>';
               return;
             },
           },
